traefik/3-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: traefik-system
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      volumes:
        - name: traefik-acme
          persistentVolumeClaim:
            claimName: traefik-acme
      containers:
        - name: traefik
          image: traefik:v2.5.3
          args:
            - --api.insecure=true
            - --api.dashboard=true
            ## Logging-metrics
            - --accesslog=true
            - --metrics.prometheus=true
            ## Entrypoints
            ### https
            - --entrypoints.websecure.Address=:443
            - --entrypoints.websecure.http.tls
            - --entrypoints.web.Address=:80
            ### http
            - --entrypoints.web.http.redirections.entryPoint.to=websecure
            - --entrypoints.web.http.redirections.entryPoint.scheme=https
            ## Providers
            - --providers.kubernetescrd=true
            - --providers.kubernetesingress=true
            ## Letsencrypt-stuff
            - --certificatesresolvers.default.acme.tlschallenge
            - --certificatesresolvers.default.acme.email=simon.ostling@arrow.com
            - --certificatesresolvers.default.acme.storage=/letsencrypt/acme.json
          volumeMounts:
            - name: traefik-acme
              mountPath: "/letsencrypt"
          ports:
            - name: websecure
              containerPort: 443
            - name: web
              containerPort: 80
            - name: admin
              containerPort: 8080
