traefik/2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik-system
  annotations:
    metallb.universe.tf/address-pool: traefik
spec:
  type: LoadBalancer   
  ports:
    - protocol: TCP
      name: websecure
      port: 443
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: admin
      port: 8080
  selector:
    app: traefik
